# caspailleur

./: CHANGELOG.md  Glossary.md  README.md  Tutorial_with_BobRoss_paintings.ipynb  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
caspailleur/: __init__.py  api.py  base_functions.py  definitions.py  implication_bases.py  implicational_system.py  indices.py  io.py  measures.py  mine_equivalence_classes.py  oop.py  orchestrator.py  order.py  registries.py  sofia.py
caspailleur/algorithms/: __init__.py  base_functions.py  definitions.py  implication_bases.py  layouts.py  mine_equivalence_classes.py  order.py
caspailleur/classes/: concept_lattice.py  formal_context.py  implicational_backends.py  implicational_system.py  measures.py  poset.py  poset_backends.py  poset_measures.py  scales.py  utils.py
tests/: test_api.py  test_base_functions.py  test_definitions.py  test_implication_bases.py  test_indices.py  test_io.py  test_mine_equivalence_classes.py  test_orchestrator.py  test_order.py  test_readme.py
tests/test_algorithms/: test_base_functions.py  test_definitions.py  test_implication_bases.py  test_mine_equivalence_classes.py  test_order.py
