# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "caspailleur"
version = "0.1.3"
description = "Minimalistic python package for mining many concise data representations. Part of SmartFCA project"
readme = "README.md"
authors = [{ name = "Egor Dudyrev" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
keywords = ["python", "fca", "itemset-mining"]
dependencies = [
    'numpy>=1.20', 'scikit-mine>=1', 'bitarray>=2.5.1', 'tqdm',
]
requires-python = ">=3.8"


[project.urls]
Homepage = "https://github.com/EgorDudyrev/caspailleur"


[tool.setuptools]
py-modules = ["caspailleur"]

[tool.setuptools.packages]
find = {}  # Scanning implicit namespaces is active by default

